--- a/src/index.html
+++ b/src/index.html
@@ -12,17 +12,31 @@
     />
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
-  <body>
-    <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
+
+  <body class="container">
+    <div class="row d-flex justify-content-center">
+      <div class="col-3 my-5">
+        <div class="bg-white rounded container" id="carta">
+          <div class="row">
+            <div class="col-12" id="inicio">
+              <p id="inicioSimbolo">&hearts;</p>
+            </div>
+          </div>
+          <div class="row" id="medio">
+            <div
+              class="col-12 d-flex justify-content-center my-4 p-0"
+              id="medio"
+            >
+              <p id="medioSimbolo">9</p>
+            </div>
+          </div>
+
+          <div class="row" id="final">
+            <div class="col-12 d-flex justify-content-end">
+              <p id="finalSimbolo">&hearts;</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
