--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,18 @@
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
 
-  <body class="container">
-    <div class="row d-flex justify-content-center">
-      <div class="col-3 my-5">
-        <div class="bg-white rounded container" id="carta">
+  <body class="container-fluid">
+    <div class="row d-flex">
+      <div class="col-5">
+        <label for="number">Cards:</label>
+        <input type="number" name="fname" />
+        <button class="btn btn-primary" onclick="drawCards()">Draw</button>
+        <button class="btn btn-danger" onclick="sortCards()">Sort</button>
+      </div>
+    </div>
+
+    <div class="row my-5 d-flex" id="carta">
+      <!-- <div class="bg-white rounded container" id="carta">
           <div class="row">
             <div class="col-12" id="inicio">
               <p id="inicioSimbolo">&hearts;</p>
@@ -24,7 +32,7 @@
           </div>
           <div class="row" id="medio">
             <div
-              class="col-12 d-flex justify-content-center my-4 p-0"
+              class="col-12 d-flex justify-content-center my-3 p-0"
               id="medio"
             >
               <p id="medioSimbolo">9</p>
@@ -36,8 +44,12 @@
               <p id="finalSimbolo">&hearts;</p>
             </div>
           </div>
-        </div>
-      </div>
+        </div> -->
     </div>
+    <h3>Bubble Sort:</h3>
+
+    <div class="row my-5 container" id="sort"></div>
+
+    <script src="js/index.js"></script>
   </body>
 </html>
